--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,14 @@
 {
     "extends": [
-        "airbnb",
-        "airbnb/hooks"
-    ]
+        "airbnb-base/legacy"
+    ],
+    "env": {
+        "es6": true,
+        "browser": true,
+        "node": true
+    },
+
+    "parserOptions": {
+        "ecmaVersion": 2017
+    } 
 }
